tdf#106237 sw: do some basic sanity checking on layout-cache

The bugdoc, with claimed generator AOO4.1.1 on Windows, contains
a bogus layout-cache:

debug:26706:1: nType P nIndex 29 2147483647
debug:26706:1: nType P nIndex 66 2147483647
debug:26706:1: nType P nIndex 105 2147483647
debug:26706:1: nType P nIndex 142 2147483647
debug:26706:1: nType P nIndex 178 2147483647
debug:26706:1: nType P nIndex 205 2147483647
debug:26706:1: nType P nIndex 229 2147483647
debug:26706:1: nType T nIndex 314 65535

Due to a loop-control this causes incorrect pagination if CalcLayout()
is called only once.

It should look like this:

debug:26765:1: nType T nIndex 382 65535
debug:26765:1: nType T nIndex 790 65535

In this case we can easily detect that the indexes and types in
the layout-cache are bogus by checking against the node types, so
do that in SwLayHelper::SwLayHelper().

(cherry picked from commit 8a5374f2fdbd1e15c107133f55930cbc431edbd5)

sw: [loplugin:sallogareas]
(cherry picked from commit 282b3e8c4d45aacae57e3542b872cdbfebcc7195)

loplugin:loopvartoosmall
(cherry picked from commit dbaab58c1442e7f62ef0732376fe5a49840e9fd6)

Change-Id: I7091af49a8c29bf0a11ceff0be9ba84b1f710fdb
Reviewed-on: https://gerrit.libreoffice.org/36046
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 137ad218db262fb3531215adbc88b7093b4999c7)